--- a/css/bootstrap.scss
+++ b/css/bootstrap.scss
@@ -1,8 +1,8 @@
 // DENNE FIL ER KUN TIL BOOTSTRAP RETTELSER
 
-@import "../node_modules/bootstrap/scss/functions";
-@import "../node_modules/bootstrap/scss/variables";
-@import "../node_modules/bootstrap/scss/mixins";
+@import "node_modules/bootstrap/scss/functions";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
 
 //Tilføj eller ret farver i Bootstrap. Herunder er primary blot sat til den normale primary
 /*
@@ -18,4 +18,4 @@ $custom-colors: (
 );
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
-@import "../node_modules/bootstrap/scss/bootstrap";
+@import "node_modules/bootstrap/scss/bootstrap";
