--- a/css/styles.scss
+++ b/css/styles.scss
@@ -34,7 +34,6 @@ img {
 
 .nav-link .active{
 	font-family: "Sans Mateo 2 Semi";
-
 }
 
 .navbar-toggler{
@@ -43,7 +42,16 @@ img {
 }
 
 .nav-link {
-	color: #f8f9fa;
+	color: #157875;
+	font-family: "Sans Mateo 2";
+}
+
+.nav-link :hover{
+	color: #0c63e4;
+}
+
+.navbar-nav .nav-link.active {
+	color: #f5f7f6;
 }
 
 
