--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,6 +9,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 	padding: 0;
+    font-family: "Sans Mateo 2";
 }
 
 ul, ol {
@@ -24,6 +25,7 @@ li {
 p {
 	margin: 0;
 	padding: 0;
+	font-family: "proxima nova";
 }
 
 img {
