added section with icons and description to about page

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -97,6 +97,7 @@ img {
 
 .aboutus-img-cow {
 	position: relative;
+	margin-bottom: 150px;
 
 }
 
@@ -115,3 +116,11 @@ img {
 	position: absolute;
 	bottom: 0;
 }
+
+.aboutus-graphic {
+	position: relative;
+	top: -15%;
+	right: 0;
+	left: 0;
+}
+
