info til ikoner samt heroimage på webshoppen.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -124,3 +124,13 @@ img {
 	left: 0;
 }
 
+.rubrik {
+	font-size:1vw;
+	font-family: "proxima nova";
+	text-underline: none;
+	text-decoration-line: none;
+	color: #17332E;
+	font-weight: bolder;
+}
+
+
