different information sections added

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -136,3 +136,32 @@ img {
 	}
 
 }
+
+.farmhousesection {
+	margin-bottom: 100px;
+}
+
+.section-top-title h1 {
+	font-size: 5vw;
+}
+
+.chewingcow {
+	border-radius: 0 30% 0 30%;
+	max-height: 900px;
+	width: auto;
+}
+
+.section-top {
+	margin-bottom: 100px;
+}
+
+.farmshop {
+	border-radius: 0 30% 0 30%;
+	max-height: 900px;
+	width: auto;
+}
+
+.natureabout {
+	border-radius: 0 30% 0 30%;
+}
+
