--- a/css/bootstrap.scss
+++ b/css/bootstrap.scss
@@ -18,6 +18,10 @@ $custom-colors: (
         "btn-primary": #6f7831,
         "cardPrimary": #e5e6db,
         "oliveGreen": #8C9361,
+        "lightGreen": #EAF0C7,
+        "dustyGrey": #999999,
+        "dustyGreen": #C1C4A9,
+        "lightBlue": #A2D4D9,
 );
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
