productinfo page finished

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -160,6 +160,15 @@ img {
 
 }
 
+.prodbilledeinfo {
+	border-radius: 0 30% 0 30%;
+}
+
+#linefigure {
+	background: #17332E;
+	height: 1px;
+	width: 25vw;
+}
 @media screen and (max-width: 991px){
 	.about-farmhouse-img {
 		border-radius: 0 20% 0 20%;
