--- a/css/styles.scss
+++ b/css/styles.scss
@@ -77,6 +77,14 @@ img {
 	text-decoration-line: none;
 }
 
+.rubrik {
+	color: #17332E;
+	font-family: "proxima nova";
+	text-underline: none;
+	text-decoration-line: none;
+	font-weight: bold;
+}
+
 .btn {
 	color: #ffffff;
 	border-radius: 0px 25px;
