--- a/css/styles.scss
+++ b/css/styles.scss
@@ -128,11 +128,11 @@ img {
 
 
 .about-farmhouse-img {
-	border-radius: 0 0 0 20%;
+	border-radius: 0 0 0 30%;
 }
 
 .about-aboutus-img {
-	border-radius: 0 20% 0 0;
+	border-radius: 0 30% 0 0;
 }
 
 .farmhousesection {
@@ -144,7 +144,7 @@ img {
 }
 
 .chewingcow {
-	border-radius: 0 30% 0 30%;
+	border-radius: 0 20% 0 20%;
 	max-height: 900px;
 	width: auto;
 }
@@ -154,13 +154,13 @@ img {
 }
 
 .farmshop {
-	border-radius: 0 30% 0 30%;
+	border-radius: 0 20% 0 20%;
 	max-height: 900px;
 	width: auto;
 }
 
 .natureabout {
-	border-radius: 0 30% 0 30%;
+	border-radius: 0 20% 0 20%;
 }
 
 .section-top p {
@@ -196,6 +196,15 @@ img {
 .btn-lg{
 	padding: 0.1rem 3rem;
 	background-color: #6f7831;
+}
+
+.js-scroll {
+	opacity: 0;
+	transition: opacity 500ms;
+}
+
+.js-scroll.scrolled {
+	opacity: 1;
 }
 
 
